fixedspacingatbottom

--- a/scss/input.scss
+++ b/scss/input.scss
@@ -466,12 +466,12 @@ h4{
     height: 2rem;
     width: 2rem;
     fill: #f2f5ea;
-    margin: 1rem;
+    margin: .5rem;
     text-decoration: none;
     cursor: pointer;
 }
 .foot-component{
-    margin: 2rem 0;
+    margin: 1rem 0;
 }
 .wash2{
     font-size: 2rem;
@@ -488,7 +488,7 @@ h4{
     text-transform: uppercase;
     display: block;
     width: 50%;
-    margin: 1.5rem auto;
+    margin: 2.5rem auto;
     font-Family: 'Fauna One', Serif;
     border-radius: .3rem;
 
